// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text layout 1`] = `
Object {
  "box": Object {
    "height": 20,
    "width": 100,
  },
  "children": Array [
    "Example content",
  ],
  "props": Object {
    "property": "example",
    "transform": "translate(0 -18)",
  },
  "type": "Text",
}
`;

exports[`Text positioning text 1`] = `
<DocumentFragment>
  <svg>
    <text
      style="font-size: 16px; font-family: Arial;"
      transform="translate(1 2)"
    >
      Example
    </text>
  </svg>
</DocumentFragment>
`;

exports[`Text rendering 1`] = `
<DocumentFragment>
  <svg>
    <text
      style="font-size: 16px; font-family: Arial;"
    >
      Example
    </text>
  </svg>
</DocumentFragment>
`;

exports[`Text rendering quoted text 1`] = `
<DocumentFragment>
  <svg>
    <text
      style="font-size: 16px; font-family: Arial;"
    >
      <tspan
        style="fill: #908c83;"
      >
        “
      </tspan>
      <tspan>
        Example
      </tspan>
      <tspan
        style="fill: #908c83;"
      >
        ”
      </tspan>
    </text>
  </svg>
</DocumentFragment>
`;

exports[`Text rendering with a theme 1`] = `
<DocumentFragment>
  <svg>
    <text
      style="font-size: 16px; font-family: Arial; fill: #fff;"
    >
      Example
    </text>
  </svg>
</DocumentFragment>
`;
